--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,12 @@ body {
   justify-content: center;
   text-align: center;
   overflow: hidden;
-  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0)), url('images/tambahan/hero.jpg');
+  background-image:
+    linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0)),
+    url("../images/tambahan/hero.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -445,6 +450,7 @@ body {
   }
 
 }
+
 
 
 
