--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ body {
   overflow: hidden;
   background-image:
     linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0)),
-    url("images/tambahan/hero.jpg");
+    url("../images/tambahan/hero.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -450,6 +450,7 @@ body {
   }
 
 }
+
 
 
 
